--- a/CSS Samples/AdvanceCSS_And_SASS/NatoursProject/sass/component/_popup.scss
+++ b/CSS Samples/AdvanceCSS_And_SASS/NatoursProject/sass/component/_popup.scss
@@ -10,9 +10,7 @@
   visibility: hidden;
   transition: all .3s;
 
-
   &__content {
-
     @include absCenter;
 
     width: 75%;
@@ -24,25 +22,34 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(.25);
     transition: all .5s .2s;
+
   }
 
 
   &__left {
     width: 33.333333%;
     display: table-cell;
-}
+  }
 
-&__right {
-  width: 66.6666667%;
-  display: table-cell;
-  vertical-align: middle;
-  padding: 3rem 5rem;
-}
+  &__right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem;
+  }
 
-&__img {
-  display: block;
-  width: 100%;
-}
+  &__img {
+    display: block;
+    width: 100%;
+  }
 
+  &__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    column-count: 2;
+    column-gap: 4rem; //1em = 14px;
+    column-rule: 1px solid $color-grey-light-2;
+    hyphens: auto;
+  }
 
 }
